--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   },
   "dependencies": {
     "postcss": "8.4.4",
+    "postcss-scss": "^4.0.3",
     "postcss-value-parser": "4.1.0",
     "stylelint": "14.1.0"
   }
