--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,7 @@ jobs:
                   node-version: 12
                   registry-url: https://registry.npmjs.org/
             - run: npm ci
+            - run: npm run test
             - run: npm run validate-icons
               env:
                   NODE_AUTH_TOKEN: ${{secrets.npm_token}}
