--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "peerDependencies": {
     "react": ">=16.9.0",
-    "prop-types": "^15.7.2"
+    "prop-types": "^15.7.2",
+    "stylelint": "^14.1.0"
   },
   "repository": {
     "type": "git",
@@ -50,7 +51,6 @@
   "dependencies": {
     "postcss": "8.4.4",
     "postcss-scss": "^4.0.3",
-    "postcss-value-parser": "4.1.0",
-    "stylelint": "14.1.0"
+    "postcss-value-parser": "4.1.0"
   }
 }
