--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "jest": "^27.5.1",
     "node-plop": "^0.26.2",
     "node-sass": "^4.14.1",
+    "stylelint": "14.1.0",
     "plop": "^2.7.4",
     "prettier": "^2.0.5"
   },
