--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   "license": "MIT",
   "files": [
     "src/",
-    "dist/"
+    "dist/",
+    "stylelint-config/"
   ],
   "bugs": {
     "url": "https://github.com/mondaycom/monday-ui-style/issues"
