--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test:without-build": "jest",
     "validate-icons": "node scripts/validate-meta.js",
     "generate-meta": "node scripts/generate-meta.js",
-    "compile-styles": "sass --style=expanded --precision 6 ./src/index.scss dist/index.css",
+    "compile-styles": "sass --style=expanded ./src/index.scss dist/index.css",
     "css-minify": "cleancss --level 1 --format breaksWith=lf --output dist/index.min.css dist/index.css",
     "build": "npm run compile-styles && npm run css-minify",
     "plop": "plop"
