--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "clean-css-cli": "^4.3.0",
     "jest": "^27.5.1",
     "node-plop": "^0.26.2",
-    "sass": "1.49.9",
+    "sass": "^1.51.0",
     "stylelint": "14.1.0",
     "plop": "^2.7.4",
     "prettier": "^2.0.5"
