--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test:without-build": "jest",
     "validate-icons": "node scripts/validate-meta.js",
     "generate-meta": "node scripts/generate-meta.js",
-    "compile-styles": "node-sass --output-style expanded --precision 6 ./src/index.scss dist/index.css",
+    "compile-styles": "sass --style=expanded ./src/index.scss dist/index.css",
     "css-minify": "cleancss --level 1 --format breaksWith=lf --output dist/index.min.css dist/index.css",
     "build": "npm run compile-styles && npm run css-minify",
     "plop": "plop"
@@ -45,7 +45,7 @@
     "clean-css-cli": "^4.3.0",
     "jest": "^27.5.1",
     "node-plop": "^0.26.2",
-    "node-sass": "^4.14.1",
+    "sass": "^1.51.0",
     "stylelint": "14.1.0",
     "plop": "^2.7.4",
     "prettier": "^2.0.5"
