--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "validate-icons": "node scripts/validate-meta.js",
     "generate-meta": "node scripts/generate-meta.js",
     "compile-styles": "sass --style=expanded ./src/index.scss dist/index.css",
+    "compile-mixins": "cat ./src/mixins/*.scss > ./dist/mixins.scss",
     "copy-files": "cp -r src/files/ dist/",
     "css-minify": "cleancss --level 1 --format breaksWith=lf --output dist/index.min.css dist/index.css",
-    "build": "npm run compile-styles && npm run css-minify && npm run copy-files",
+    "build": "npm run compile-styles && npm run css-minify && npm run copy-files && npm run compile-mixins",
     "plop": "plop",
     "stylelint": "stylelint \"**/*.scss\"",
     "stylelint:fix": "stylelint \"**/*.scss\" --fix",
