--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -29,7 +29,7 @@ jobs:
         id: wait-for-tests
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          checkName: "meta test"
+          checkName: "meta-test"
           ref: ${{ github.event.pull_request.head.sha || github.sha }}
           timeoutSeconds: 1200
           intervalSeconds: 20
