--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.166",
   "description": "Monday UI CSS Foundations",
   "main": "dist/index.css",
+  "exports": {
+   "./mixins.scss": "./dist/mixins/index.scss"
+  },
   "scripts": {
     "auto:bump-patch": "node scripts/autobump_patch.js",
     "auto:bump-minor": "node scripts/autobump_minor.js",
@@ -12,8 +15,8 @@
     "validate-icons": "node scripts/validate-meta.js",
     "generate-meta": "node scripts/generate-meta.js",
     "compile-styles": "sass --style=expanded ./src/index.scss dist/index.css",
-    "compile-mixins": "cat ./src/mixins/*.scss > ./dist/mixins.scss",
-    "copy-files": "cp -r src/files/ dist/",
+    "compile-mixins": "scripts/compile-mixins.sh",
+    "copy-files": "cp -r src/output/files/ dist/",
     "css-minify": "cleancss --level 1 --format breaksWith=lf --output dist/index.min.css dist/index.css",
     "build": "npm run compile-styles && npm run css-minify && npm run copy-files && npm run compile-mixins",
     "plop": "plop",
