--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "stylelint": "stylelint \"**/*.scss\"",
     "stylelint:fix": "stylelint \"**/*.scss\" --fix",
     "fix-lint": "prettier --write \"{,!(node_modules)/**/}*.{js,jsx,ts,tsx,scss}\"",
-    "pre-release": "./scripts/prerelease.js"
+    "pre-release": "./scripts/prerelease.js",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "peerDependencies": {
-    "react": ">=16.9.0",
     "prop-types": "^15.7.2",
+    "react": ">=16.9.0",
     "stylelint": "^14.1.0"
   },
   "repository": {
@@ -46,24 +48,38 @@
     "url": "https://github.com/mondaycom/monday-ui-style/issues"
   },
   "homepage": "https://github.com/mondaycom/monday-ui-style#readme",
-  "devDependencies": {
-    "@types/jest": "^27.4.1",
-    "clean-css-cli": "^4.3.0",
-    "jest": "^27.5.1",
-    "node-plop": "^0.26.2",
-    "sass": "^1.51.0",
-    "plop": "^2.7.4",
-    "prettier": "^2.0.5",
-    "stylelint": "^14.2.0",
-    "stylelint-config-recommended": "^7.0.0",
-    "stylelint-config-recommended-scss": "^6.0.0",
-    "stylelint-config-standard": "^24.0.0",
-    "stylelint-config-standard-scss": "^3.0.0",
-    "execa": "^5.1.1"
-  },
   "dependencies": {
     "postcss": "8.4.4",
     "postcss-scss": "^4.0.3",
     "postcss-value-parser": "4.1.0"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.22.9",
+    "@babel/preset-react": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
+    "@storybook/addon-essentials": "^7.0.27",
+    "@storybook/addon-interactions": "^7.0.27",
+    "@storybook/addon-links": "^7.0.27",
+    "@storybook/blocks": "^7.0.27",
+    "@storybook/react": "^7.0.27",
+    "@storybook/react-webpack5": "^7.0.27",
+    "@storybook/testing-library": "^0.0.14-next.2",
+    "@types/jest": "^27.4.1",
+    "clean-css-cli": "^4.3.0",
+    "execa": "^5.1.1",
+    "jest": "^27.5.1",
+    "node-plop": "^0.26.2",
+    "plop": "^2.7.4",
+    "prettier": "^2.0.5",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sass": "^1.51.0",
+    "storybook": "^7.0.27",
+    "stylelint": "^14.2.0",
+    "stylelint-config-recommended": "^7.0.0",
+    "stylelint-config-recommended-scss": "^6.0.0",
+    "stylelint-config-standard": "^24.0.0",
+    "stylelint-config-standard-scss": "^3.0.0"
   }
 }
