--- a/package.json
+++ b/package.json
@@ -49,9 +49,12 @@
   },
   "homepage": "https://github.com/mondaycom/monday-ui-style#readme",
   "dependencies": {
+    "@storybook/addon-styling": "^1.3.4",
+    "classnames": "^2.3.2",
     "postcss": "8.4.4",
     "postcss-scss": "^4.0.3",
-    "postcss-value-parser": "4.1.0"
+    "postcss-value-parser": "4.1.0",
+    "vibe-storybook-components": "file:../vibe-storybook-components/vibe-storybook-components-0.0.1.tgz"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.22.9",
@@ -74,7 +77,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.51.0",
+    "sass": "^1.63.6",
     "storybook": "^7.0.27",
     "stylelint": "^14.2.0",
     "stylelint-config-recommended": "^7.0.0",
