--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
     "@storybook/react": "^7.0.27",
     "@storybook/react-webpack5": "^7.0.27",
     "@storybook/testing-library": "^0.0.14-next.2",
+    "@storybook/theming": "^7.0.27",
+    "@storybook/manager-api": "^7.0.27",
     "@types/jest": "^27.4.1",
     "clean-css-cli": "^4.3.0",
     "vibe-storybook-components": "^0.0.1",
