--- a/package.json
+++ b/package.json
@@ -63,14 +63,13 @@
     "@storybook/addon-interactions": "^7.0.27",
     "@storybook/addon-links": "^7.0.27",
     "@storybook/blocks": "^7.0.27",
+    "@storybook/manager-api": "^7.0.27",
     "@storybook/react": "^7.0.27",
     "@storybook/react-webpack5": "^7.0.27",
     "@storybook/testing-library": "^0.0.14-next.2",
     "@storybook/theming": "^7.0.27",
-    "@storybook/manager-api": "^7.0.27",
     "@types/jest": "^27.4.1",
     "clean-css-cli": "^4.3.0",
-    "vibe-storybook-components": "^0.0.1",
     "execa": "^5.1.1",
     "jest": "^27.5.1",
     "node-plop": "^0.26.2",
@@ -85,6 +84,7 @@
     "stylelint-config-recommended": "^7.0.0",
     "stylelint-config-recommended-scss": "^6.0.0",
     "stylelint-config-standard": "^24.0.0",
-    "stylelint-config-standard-scss": "^3.0.0"
+    "stylelint-config-standard-scss": "^3.0.0",
+    "vibe-storybook-components": "^0.0.2-corrupted-package-a0c7682af2.0"
   }
 }
