--- a/package.json
+++ b/package.json
@@ -85,6 +85,6 @@
     "stylelint-config-recommended-scss": "^6.0.0",
     "stylelint-config-standard": "^24.0.0",
     "stylelint-config-standard-scss": "^3.0.0",
-    "vibe-storybook-components": "^0.0.2-corrupted-package-a0c7682af2.0"
+    "vibe-storybook-components": "^0.0.2"
   }
 }
