Script to generate changelog

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "css-minify": "cleancss --level 1 --format breaksWith=lf --output dist/index.min.css dist/index.css",
     "build": "npm run compile-styles && npm run css-minify && npm run copy-files && npm run copy-public-mixins",
     "plop": "plop",
+    "changelog": "./scripts/changelog.js",
     "stylelint": "stylelint \"**/*.scss\"",
     "stylelint:fix": "stylelint \"**/*.scss\" --fix",
     "fix-lint": "prettier --write \"{,!(node_modules)/**/}*.{js,jsx,ts,tsx,scss}\"",
@@ -48,6 +49,7 @@
   "homepage": "https://github.com/mondaycom/monday-ui-style#readme",
   "devDependencies": {
     "@types/jest": "^27.4.1",
+    "changelog": "^1.4.2",
     "clean-css-cli": "^4.3.0",
     "jest": "^27.5.1",
     "node-plop": "^0.26.2",
