--- a/package.json
+++ b/package.json
@@ -55,14 +55,13 @@
     "postcss-value-parser": "4.1.0"
   },
   "devDependencies": {
-    "@storybook/addon-styling": "^1.3.4",
-    "classnames": "^2.3.2",
     "@babel/preset-env": "^7.22.9",
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
     "@storybook/addon-essentials": "^7.0.27",
     "@storybook/addon-interactions": "^7.0.27",
     "@storybook/addon-links": "^7.0.27",
+    "@storybook/addon-styling": "^1.3.4",
     "@storybook/blocks": "^7.0.27",
     "@storybook/manager-api": "^7.0.27",
     "@storybook/react": "^7.0.27",
@@ -71,6 +70,8 @@
     "@storybook/theming": "^7.0.27",
     "@types/jest": "^27.4.1",
     "changelog": "^1.4.2",
+    "chromatic": "^6.20.0",
+    "classnames": "^2.3.2",
     "clean-css-cli": "^4.3.0",
     "execa": "^5.1.1",
     "jest": "^27.5.1",
