--- a/package.json
+++ b/package.json
@@ -86,6 +86,6 @@
     "stylelint-config-recommended-scss": "^6.0.0",
     "stylelint-config-standard": "^24.0.0",
     "stylelint-config-standard-scss": "^3.0.0",
-    "vibe-storybook-components": "file:../vibe-storybook-components/vibe-storybook-components-0.1.0.tgz"
+    "vibe-storybook-components": "^0.1.1-export-storybook-css-tokens-e593d3c203.0"
   }
 }
