--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "auto:bump-major": "node scripts/autobump_major.js",
     "test": "npm run build && npm run test:without-build",
     "test:without-build": "jest",
-    "validate-icons": "node scripts/validate-meta.js",
+    "validate-icons": "node scripts/validate-meta.js && node scripts/validate-icons-colors.js",
     "generate-meta": "node scripts/generate-meta.js",
     "compile-styles": "sass --style=expanded ./src/index.scss dist/index.css",
     "copy-public-mixins": "scripts/copy-public-mixins.sh",
@@ -18,10 +18,9 @@
     "build": "npm run compile-styles && npm run css-minify && npm run copy-files && npm run copy-public-mixins",
     "plop": "plop",
     "changelog": "./scripts/changelog.js",
-    "stylelint": "stylelint \"**/*.scss\" && npm run lint:validate-icons-colors",
+    "stylelint": "stylelint \"**/*.scss\"",
     "stylelint:fix": "stylelint \"**/*.scss\" --fix",
     "fix-lint": "prettier --write \"{,!(node_modules)/**/}*.{js,jsx,ts,tsx,scss}\"",
-    "lint:validate-icons-colors": "node ./scripts/validate-icons-colors.js",
     "pre-release": "./scripts/prerelease.js",
     "storybook": "storybook dev -p 7006",
     "build-storybook": "storybook build"
