--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: 18
+          node-version-file: ".nvmrc"
           registry-url: https://registry.npmjs.org/
       - run: npm ci
       - run: npm run stylelint
