--- a/package.json
+++ b/package.json
@@ -64,13 +64,14 @@
     "@storybook/addon-essentials": "^7.5.0",
     "@storybook/addon-interactions": "^7.5.0",
     "@storybook/addon-links": "^7.5.0",
-    "@storybook/addon-styling": "^1.3.7",
+    "@storybook/addon-themes": "^7.5.0",
     "@storybook/blocks": "^7.5.0",
     "@storybook/manager-api": "^7.5.0",
     "@storybook/react": "^7.5.0",
     "@storybook/react-webpack5": "^7.5.0",
     "@storybook/testing-library": "^0.2.2",
     "@storybook/theming": "^7.5.0",
+    "@storybook/preset-scss": "^1.0.3",
     "@types/jest": "^27.4.1",
     "changelog": "^1.4.2",
     "chromatic": "^6.20.0",
